Si, despues de tantos errores, de tanto tiempo y de tantos ERRORES porfin lo e logrado Version Funcional V1.0.0
