# storage/api-docs/api-docs.json
@@ -31,11 +31,11 @@
                                 "properties": {
                                     "correo": {
                                         "type": "string",
-                                        "example": "admin@ventasfix.cl"
+                                        "example": "elmas@camito.c"
                                     },
                                     "contraseña": {
                                         "type": "string",
-                                        "example": "Admin123"
+                                        "example": "Papaya123"
                                     }
                                 },
                                 "type": "object"
@@ -83,16 +83,16 @@
                         "application/json": {
                             "schema": {
                                 "required": [
-                                    "rut_empresa",
+                                    "rut_empr",
                                     "rubro",
                                     "razon_social",
                                     "telefono",
                                     "direccion",
                                     "nombre_contacto",
-                                    "email_contacto"
+                                    "correo_contacto"
                                 ],
                                 "properties": {
-                                    "rut_empresa": {
+                                    "rut_empr": {
                                         "type": "string",
                                         "example": "76123456-7"
                                     },
@@ -116,7 +116,7 @@
                                         "type": "string",
                                         "example": "María López"
                                     },
-                                    "email_contacto": {
+                                    "correo_contacto": {
                                         "type": "string",
                                         "example": "maria@comercialejemplo.cl"
                                     }
@@ -188,6 +188,55 @@
                         }
                     }
                 ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "rut_empr",
+                                    "rubro",
+                                    "razon_social",
+                                    "telefono",
+                                    "direccion",
+                                    "nombre_contacto",
+                                    "correo_contacto"
+                                ],
+                                "properties": {
+                                    "rut_empr": {
+                                        "type": "string",
+                                        "example": "76123456-7"
+                                    },
+                                    "rubro": {
+                                        "type": "string",
+                                        "example": "retail"
+                                    },
+                                    "razon_social": {
+                                        "type": "string",
+                                        "example": "Comercial Ejemplo Ltda."
+                                    },
+                                    "telefono": {
+                                        "type": "string",
+                                        "example": "+56912345678"
+                                    },
+                                    "direccion": {
+                                        "type": "string",
+                                        "example": "Av. Siempre Viva 123"
+                                    },
+                                    "nombre_contacto": {
+                                        "type": "string",
+                                        "example": "María López"
+                                    },
+                                    "correo_contacto": {
+                                        "type": "string",
+                                        "example": "maria@comercialejemplo.cl"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "200": {
                         "description": "Cliente actualizado con éxito (cuando escribo cosas como)"
@@ -381,6 +430,65 @@
                         }
                     }
                 ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "sku",
+                                    "nombre",
+                                    "descr_corta",
+                                    "descr_larga",
+                                    "precio_neto",
+                                    "stock_actual",
+                                    "stock_minimo",
+                                    "stock_bajo",
+                                    "stock_alto"
+                                ],
+                                "properties": {
+                                    "sku": {
+                                        "type": "string",
+                                        "example": "PROD-001"
+                                    },
+                                    "nombre": {
+                                        "type": "string",
+                                        "example": "Mouse inalámbrico"
+                                    },
+                                    "descr_corta": {
+                                        "type": "string",
+                                        "example": "Mouse ergonómico"
+                                    },
+                                    "descr_larga": {
+                                        "type": "string",
+                                        "example": "Mouse inalámbrico con diseño ergonómico"
+                                    },
+                                    "precio_neto": {
+                                        "type": "integer",
+                                        "example": 10000
+                                    },
+                                    "stock_actual": {
+                                        "type": "integer",
+                                        "example": 50
+                                    },
+                                    "stock_minimo": {
+                                        "type": "integer",
+                                        "example": 5
+                                    },
+                                    "stock_bajo": {
+                                        "type": "integer",
+                                        "example": 10
+                                    },
+                                    "stock_alto": {
+                                        "type": "integer",
+                                        "example": 100
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "200": {
                         "description": "se actualizo, bien ahi"
